test/valid/List/Empty.plume
/**
 * An empty list
 *
 * @author Vasco T. Vasconcelos
 * @version $Id: Empty.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
class Empty extends List is

  method override isEmpty : () -> Boolean is
    true
    
  method override length : () -> Integer is
    0
    
  method override get : (index: Integer) -> Integer is
    error
    
  method override contains : (elem: Integer) -> Boolean is
    false
    
  method override toString : () -> String is
    "[]"
    