test/invalid/fc34950_invalid_params/A.plume
/**
 * A.plume
 *
 * Test: extends itself  
 *
 * @author namartins
 * @version $Id: A.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
 
 class A extends Object is	
 	 method  isValid: (x : Integer  ) -> Boolean
 	 	if(x >= 0) then true else false
 	